# hy-home.service-2

./: .env.example  .eslintignore  .gitignore  .gitmessage  .gitmessage.json  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COLLABORATING.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  OPERATIONS.md  README.md  docker-compose.test.yml  docker-compose.yml  mypy_output.txt  package-lock.json  package.json  pre_commit_result.txt  pyproject.toml
.agent/rules/: ci-cd-pipelines.md  integration-testing-strategies.md  python-async-programming-expert.md  python-backend-development-with-fastapi.md  python-rest-api-development-expert.md  python-security-best-practices.md  python-testing-best-practices.md  security-and-penetration-testing.md  test-driven-development.md  unit-testing-best-practices.md
.cursor/rules/: python-function-reflection-assistant.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  greetings.yml  labeler.yml  quality-gates.yml  release.yml  stale.yml
.opencode/: opencode.jsonc
agent_settings/rules/0000-Agents/: 0000-agentic-pillar-standard.md  0001-ai-prompt-engineer-agent.md  0002-strong-reasoner-agent.md  0003-mcp-developer-standard.md  0010-api-design-standard.md  0011-database-design-standard.md  0012-code-review-standard.md  0013-refactoring-standard.md  0014-code-migration-standard.md  0015-debugging-standard.md  0016-performance-optimization-standard.md  0017-code-test-writing-standard.md  0018-specialized-agent-personas-standard.md  0019-agents-md-generator-standard.md  0020-security-audit-standard.md  0025-devops-agent-persona.md
agent_settings/rules/0100-Standards/: 0100-unified-master.md  0101-rule-writing-standard.md  0102-implementation-plan-standard.md  0104-engineering-standard.md  0105-prompt-engineering-standard.md  0106-responsible-ai.md  0106-workflow-writing.md  0110-git-standards.md  0110-impl-core-principles.md  0111-impl-task-spec.md  0112-impl-workflow.md  0113-impl-traceability.md  0114-impl-estimation.md  0115-impl-templates.md  0120-requirements-and-specifications-standard.md  0130-architecture-standard.md  0140-engineering-excellence-standard.md  0140-engineering-excellence.md  0143-tech-debt-management.md  0150-tech-stack-standard.md  0160-ux-research.md
agent_settings/rules/0200-Workflows/: 0200-workflow-standard.md  0200-workflows-pillar-standard.md  0201-project-management-standard.md  0202-collaboration-and-sla-standard.md
agent_settings/rules/0300-DevOps_and_Infrastructure/: 0300-devops-pillar-standard.md  0301-operations-blueprint-standard.md  0310-infrastructure-docker.md  0320-infrastructure-terraform.md  0325-infrastructure-kubernetes.md  0326-ingress-tls.md  0327-service-mesh.md  0328-resource-quota.md  0329-k8s-tenancy.md  0330-infrastructure-cicd.md  0335-gitops-standard.md  0340-gitops-argo.md  0341-progressive-delivery.md  0342-backup-restore.md  0350-shell-scripting-standard.md  0366-nginx-standard.md  0370-mcp-server-standard.md  0380-incident-response.md  0381-runbooks-oncall.md  0385-risk-management-standard.md  0401-git-workflow-standard.md  2000-config-and-feature-flags.md
agent_settings/rules/0400-Cloud/: 0401-cloud-governance-standard.md  0410-aws-standard.md  0420-serverless-standard.md  0430-specialized-cloud-standards.md  0440-cloud-provider-standards.md
agent_settings/rules/0500-AI_and_ML/: 0500-ai-general.md  0501-prompt-engineering.md  0510-ai-safety.md
agent_settings/rules/0600-DB_and_Data/: 0600-database-general.md  0610-storage-policy.md  0620-redis-standard.md  0630-database-nosql.md  0640-data-engineering-standard.md
agent_settings/rules/0700-Testing_and_QA/: 0700-testing-and-qa-standard.md  0700-testing-standards.md
agent_settings/rules/0800-Web_Development/: 0800-web-performance-optimization-expert.md  102-frontend-project-structure-specific.md
agent_settings/rules/0900-Backend/: 0900-backend-standard.md  0920-node-backend-standard.md  0931-kafka-standard.md
agent_settings/rules/1000-Frontend/: 1000-frontend-general.md  1000-frontend-standard.md  1003-frontend-project-standard.md  1010-styling-standard.md  (+16 more)
docs/: 01-project-overview.md  02-architecture.md  03-governance-standards.md  04-agent-integration.md  05-repository-structure.md  06-development-guide.md  07-setup-installation.md  08-tech-stack.md  09-security-qa.md  10-infrastructure.md  README.md  documentation-standards.md  onboarding.md
docs/adr/: README.md
docs/agents/: 04-agent-integration.md  README.md
docs/ard/: README.md
docs/core/: 00-catalog.md  01-project-overview.md  02-architecture.md  03-governance-standards.md  05-repository-structure.md  08-tech-stack.md  11-documentation-standards.md  README.md
docs/guides/: README.md  agent-rules-checklist.md  architecture-tech-stack-checklist.md  business-product-checklist.md  development-process-collaboration-checklist.md  getting-started.md  operations-deployment-monitoring-checklist.md  quality-testing-security-checklist.md
docs/manuals/: 06-development-guide.md  07-setup-installation.md  08-sensitive-data-handling.md  09-security-qa.md  10-infrastructure.md  11-collaboration-guide.md  README.md
docs/prd/: README.md
examples/: README.md
scripts/: bootstrap-new-project.ps1  bootstrap-new-project.sh  check_pr_size.py  new-adr.ps1  new-adr.sh  new-prd.ps1  new-prd.sh  setup-workspace.ps1  setup-workspace.sh  sync-agent-settings.ps1  sync-agent-settings.sh  validate-docs.ps1  validate-docs.sh  validate_prd.py  validate_spec.py
specs/: README.md
src/: main.py
src/api/: __init__.py
src/models/: __init__.py  user.py  video.py
src/services/: __init__.py  video_analysis.py
templates/: adr-template.md  ard-template.md  prd-template.md  spec-template.md
tests/: test_validate_docs.py
tests/load/: Dockerfile  docker-compose.yml  locustfile.py
tests/unit/: test_main.py
(+319 files in other folders)
