[project]
    authors=[{name="Your Name", email="you@example.com"}]
    dependencies=[
        "aiokafka>=0.12.0",
        "boto3>=1.41.3",
        "edge-tts>=7.2.3",
        "httpx>=0.28.1",
        "numpy<2.3.0",
        "opencv-python-headless>=4.12.0.88",
        "opentelemetry-api>=1.38.0",
        "opentelemetry-sdk>=1.38.0",
        "protobuf>=6.33.1",
        "psycopg2-binary>=2.9.11",
        "pydantic-settings>=2.12.0",
        "pydantic>=2.12.4",
        "python-dotenv>=1.2.1",
        "python-logging-loki>=0.3.1",
        "redis>=7.1.0",
        "requests>=2.32.5",
        "sqlalchemy>=2.0.44",
        "yt-dlp>=2025.11.12",
    ]
    description="analysis worker service"
    name="hy-home-service-2"
    readme="README.md"
    requires-python=">=3.13"
    version="0.1.0"

[dependency-groups]
    dev=[
        "httpx>=0.28.1",
        "pre-commit>=4.5.1",
        "pytest-asyncio>=1.3.0",
        "pytest>=9.0.2",
        "ruff>=0.14.10",
    ]
[build-system]
    build-backend="hatchling.build"
    requires     =["hatchling"]
[tool.uv]
    package=false

[tool.ruff]
    line-length   =120
    target-version="py313"

    [tool.ruff.lint]
        ignore=[]
        select=[
            "A",   # flake8-builtins: Avoid shadowing builtins
            "B",   # flake8-bugbear: Design problems
            "C4",  # flake8-comprehensions: Better comprehensions
            "E",   # pycodestyle errors
            "F",   # Pyflakes: Logic errors
            "I",   # isort: Import sorting
            "N",   # pep8-naming: Standard naming conventions
            "PT",  # flake8-pytest-style: Better pytest practices
            "RUF", # Ruff-specific rules
            "S",   # flake8-bandit: Security checks
            "SIM", # flake8-simplify: Code simplification
            "UP",  # pyupgrade: Upgrade syntax
        ]

        [tool.ruff.lint.isort]
            known-first-party=["src"]

    [tool.ruff.format]
        indent-style="space"
        quote-style ="double"

        [tool.ruff.lint.flake8-bugbear]
            extend-immutable-calls=[
                "fastapi.Body",
                "fastapi.Cookie",
                "fastapi.Depends",
                "fastapi.Header",
                "fastapi.Path",
                "fastapi.Query",
                "fastapi.Security",
            ]

[tool.pytest.ini_options]
    addopts  ="--ignore=tests/load/"
    testpaths=["tests"]
