[build-system]
    build-backend="hatchling.build"
    requires     =["hatchling"]

[project]
    authors=[{name="Your Name", email="you@example.com"}]
    dependencies=[
        "aiokafka>=0.12.0",
        "boto3>=1.41.3",
        "edge-tts>=7.2.3",
        "fastapi>=0.115.0",
        "httpx>=0.28.1",
        "numpy<2.3.0",
        "opencv-python-headless>=4.12.0.88",
        "opentelemetry-api>=1.38.0",
        "opentelemetry-sdk>=1.38.0",
        "protobuf>=6.33.1",
        "psycopg2-binary>=2.9.11",
        "pydantic-settings>=2.12.0",
        "pydantic>=2.12.4",
        "python-dotenv>=1.2.1",
        "python-logging-loki>=0.3.1",
        "redis>=7.1.0",
        "requests>=2.32.5",
        "sqlalchemy>=2.0.44",
        "yt-dlp>=2025.11.12",
    ]
    description="analysis worker service"
    name="hy-home-service-2"
    readme="README.md"
    requires-python=">=3.13"
    version="0.1.0"

[dependency-groups]
    dev=[
        "detect-secrets>=1.5.0",
        "httpx>=0.28.1",
        "mypy>=1.19.1",
        "pip-audit>=2.10.0",
        "pre-commit>=4.5.1",
        "pytest-asyncio>=1.3.0",
        "pytest-cov>=7.0.0",
        "pytest-mock>=3.15.1",
        "pytest-xdist>=3.8.0",
        "pytest>=9.0.2",
        "ruff>=0.14.10",
]

    # --- Tool Settings ---


[tool.uv]
    package=false

[tool.ruff]
    line-length   =120
    target-version="py313"

    [tool.ruff.lint]
        ignore=[]
        select=[
            "A",     # flake8-builtins: Avoid shadowing builtins
            "ARG",   # unused-arguments (미사용 인자)
            "ASYNC", # 비동기 코드 최적화
            "B",     # flake8-bugbear: Design problems
            "C4",    # flake8-comprehensions: Better comprehensions
            "C90",   # mccabe (복잡도 검사)
            "D",     # pydocstyle (문서화 규칙)
            "E",     # pycodestyle errors
            "ERA",   # erradicate (주석 처리된 코드)
            "F",     # Pyflakes: Logic errors
            "FURB",  # 현대적 리팩토링
            "I",     # isort: Import sorting
            "LOG",   # 로깅 가이드 준수
            "N",     # pep8-naming: Standard naming conventions
            "PERF",  # 성능 최적화
            "PL",    # Pylint (파이린트 규칙)
            "PT",    # flake8-pytest-style: Better pytest practices
            "RUF",   # Ruff-specific rules
            "S",     # flake8-bandit: Security checks
            "SIM",   # flake8-simplify: Code simplification
            "T20",   # flake8-print (프린트문 제한)
            "TCH",   # flake8-type-checking (타입 체크)
            "TID",   # flake8-tidy-imports (임포트 정돈)
            "UP",    # pyupgrade: Upgrade syntax
        ]

        [tool.ruff.lint.pydocstyle]
            # Google 스타일 또는 NumPy 스타일 중 선택 가능
            convention="google"

        [tool.ruff.lint.per-file-ignores]
            "app/core/config/settings.py"=["S105", "S106"]
            "tests/**/*"                 =["S101", "S105", "S106", "S110", "D103", "PLC0415", "SIM117", "PLR2004", "B017", "PT011"]

        [tool.ruff.lint.isort]
            known-first-party=["src"]

        [tool.ruff.lint.flake8-bugbear]
            extend-immutable-calls=[
                "fastapi.Body",
                "fastapi.Cookie",
                "fastapi.Depends",
                "fastapi.Header",
                "fastapi.Path",
                "fastapi.Query",
                "fastapi.Security",
            ]
        [tool.ruff.lint.mccabe]
            max-complexity=10 # 복잡도 임계값 설정 (보통 10 이하 권장)

    [tool.ruff.format]
        indent-style="space"
        quote-style ="double"

[tool.mypy]
    # 파이썬 버전 설정
    python_version="3.13"
    # 엄격한 타입 체크 활성화
    strict=true
    # 사용 중인 라이브러리(pydantic 등)의 타입 힌트 인식 활성화
    ignore_missing_imports=true
    # 소스 경로 지정
    check_untyped_defs    =true              # 타입 힌트 없는 함수 내부 검사
    disallow_untyped_calls=true              # 타입 정의 없는 함수 호출 금지
    mypy_path             ="src"
    plugins               =["pydantic.mypy"]
    warn_unused_ignores   =true              # 불필요한 # type: ignore 경고
    [[tool.mypy.overrides]]
        # 테스트 코드에서는 일부 엄격한 규칙 완화 가능
        allow_untyped_defs=true
        disallow_subclassing_any=false
        module=[
            "src.core.cache.*",
            "src.core.message_broker.*",
            "src.main",
            "tests.*",
        ]

[tool.pydantic-mypy]
    init_forbid_extra            =true
    init_typed                   =true
    warn_required_dynamic_aliases=true

[tool.coverage.run]
    omit  =["**/__init__.py", "tests/*"]
    source=["src"]

[tool.coverage.report]
    fail_under  =80    # Temporarily lowered to diagnose failures
    show_missing=true


[tool.pytest.ini_options]
    addopts  ="--ignore=tests/load/ --cov=src --cov-report=term-missing"
    testpaths=["tests"]
    # 비동기 테스트 모드 자동 설정 (Strict 모드 권장)
    asyncio_default_fixture_loop_scope="function"
    asyncio_mode                      ="auto"
